// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Converts dynamic TabList Item to Tab 1`] = `
"import { Tab, Collection, TabPanel, Tabs, TabList } from "@react-spectrum/s2";

let tabs = [{name: 'Tab 1', children: 'Tab Body 1'}];

<Tabs aria-label="Dynamic tabs"><TabList items={tabs}>
    {(item) => (
      <Tab id={item.name}>
        {item.name}
      </Tab>
    )}
  </TabList><Collection items={tabs}>
    {(item) => (
      <TabPanel id={item.name}>
        {item.children}
      </TabPanel>
    )}
  </Collection></Tabs>"
`;

exports[`Move items from Tabs to TabList 1`] = `
"import { Tab, Collection, TabPanel, Tabs, TabList } from "@react-spectrum/s2";

let items = [
  {name: 'Tab 1', children: 'Tab Body 1'},
  {name: 'Tab 2', children: 'Tab Body 2'},
  {name: 'Tab 3', children: 'Tab Body 3'},
  {name: 'Tab 4', children: 'Tab Body 4'},
  {name: 'Tab 5', children: 'Tab Body 5'},
  {name: 'Tab 6', children: 'Tab Body 6'}
];

<Tabs aria-label="Dynamic tabs"><TabList items={tabs}>
    {(item) => (
      <Tab id={item.name}>
        {item.name}
      </Tab>
    )}
  </TabList><Collection items={tabs}>
    {(item) => (
      <TabPanel id={item.name}>
        {item.children}
      </TabPanel>
    )}
  </Collection></Tabs>"
`;

exports[`Remove isEmphasized 1`] = `
"import { Tab, TabPanel, Tabs, TabList } from "@react-spectrum/s2";
let isEmphasized = true;
let props = {isEmphasized: true};
<div>
  <Tabs aria-label="History of Ancient Rome"><TabList>
      <Tab id="FoR">Founding of Rome</Tab>
      <Tab id="MaR">Monarchy and Republic</Tab>
      <Tab id="Emp">Empire</Tab>
    </TabList><TabPanel id="FoR">Arma virumque cano, Troiae qui primus ab oris.</TabPanel><TabPanel id="MaR">Senatus Populusque Romanus.</TabPanel><TabPanel id="Emp">Alea jacta est.</TabPanel></Tabs>
  <Tabs aria-label="History of Ancient Rome"><TabList>
      <Tab id="FoR">Founding of Rome</Tab>
      <Tab id="MaR">Monarchy and Republic</Tab>
      <Tab id="Emp">Empire</Tab>
    </TabList><TabPanel id="FoR">Arma virumque cano, Troiae qui primus ab oris.</TabPanel><TabPanel id="MaR">Senatus Populusque Romanus.</TabPanel><TabPanel id="Emp">Alea jacta est.</TabPanel></Tabs>
  <Tabs aria-label="History of Ancient Rome"><TabList>
      <Tab id="FoR">Founding of Rome</Tab>
      <Tab id="MaR">Monarchy and Republic</Tab>
      <Tab id="Emp">Empire</Tab>
    </TabList><TabPanel id="FoR">Arma virumque cano, Troiae qui primus ab oris.</TabPanel><TabPanel id="MaR">Senatus Populusque Romanus.</TabPanel><TabPanel id="Emp">Alea jacta est.</TabPanel></Tabs>
  <Tabs aria-label="History of Ancient Rome"><TabList>
      <Tab id="FoR">Founding of Rome</Tab>
      <Tab id="MaR">Monarchy and Republic</Tab>
      <Tab id="Emp">Empire</Tab>
    </TabList><TabPanel id="FoR">Arma virumque cano, Troiae qui primus ab oris.</TabPanel><TabPanel id="MaR">Senatus Populusque Romanus.</TabPanel><TabPanel id="Emp">Alea jacta est.</TabPanel></Tabs>
  <Tabs aria-label="History of Ancient Rome" // TODO(S2-upgrade): check this spread for style props
  {...props}><TabList>
      <Tab id="FoR">Founding of Rome</Tab>
      <Tab id="MaR">Monarchy and Republic</Tab>
      <Tab id="Emp">Empire</Tab>
    </TabList><TabPanel id="FoR">Arma virumque cano, Troiae qui primus ab oris.</TabPanel><TabPanel id="MaR">Senatus Populusque Romanus.</TabPanel><TabPanel id="Emp">Alea jacta est.</TabPanel></Tabs>
</div>"
`;

exports[`Remove isQuiet 1`] = `
"import { Tab, TabPanel, Tabs, TabList } from "@react-spectrum/s2";
let isQuiet = true;
let props = {isQuiet: true};
<div>
  <Tabs aria-label="History of Ancient Rome"><TabList>
      <Tab id="FoR">Founding of Rome</Tab>
      <Tab id="MaR">Monarchy and Republic</Tab>
      <Tab id="Emp">Empire</Tab>
    </TabList><TabPanel id="FoR">Arma virumque cano, Troiae qui primus ab oris.</TabPanel><TabPanel id="MaR">Senatus Populusque Romanus.</TabPanel><TabPanel id="Emp">Alea jacta est.</TabPanel></Tabs>
  <Tabs aria-label="History of Ancient Rome"><TabList>
      <Tab id="FoR">Founding of Rome</Tab>
      <Tab id="MaR">Monarchy and Republic</Tab>
      <Tab id="Emp">Empire</Tab>
    </TabList><TabPanel id="FoR">Arma virumque cano, Troiae qui primus ab oris.</TabPanel><TabPanel id="MaR">Senatus Populusque Romanus.</TabPanel><TabPanel id="Emp">Alea jacta est.</TabPanel></Tabs>
  <Tabs aria-label="History of Ancient Rome"><TabList>
      <Tab id="FoR">Founding of Rome</Tab>
      <Tab id="MaR">Monarchy and Republic</Tab>
      <Tab id="Emp">Empire</Tab>
    </TabList><TabPanel id="FoR">Arma virumque cano, Troiae qui primus ab oris.</TabPanel><TabPanel id="MaR">Senatus Populusque Romanus.</TabPanel><TabPanel id="Emp">Alea jacta est.</TabPanel></Tabs>
  <Tabs aria-label="History of Ancient Rome"><TabList>
      <Tab id="FoR">Founding of Rome</Tab>
      <Tab id="MaR">Monarchy and Republic</Tab>
      <Tab id="Emp">Empire</Tab>
    </TabList><TabPanel id="FoR">Arma virumque cano, Troiae qui primus ab oris.</TabPanel><TabPanel id="MaR">Senatus Populusque Romanus.</TabPanel><TabPanel id="Emp">Alea jacta est.</TabPanel></Tabs>
  <Tabs aria-label="History of Ancient Rome" // TODO(S2-upgrade): check this spread for style props
  {...props}><TabList>
      <Tab id="FoR">Founding of Rome</Tab>
      <Tab id="MaR">Monarchy and Republic</Tab>
      <Tab id="Emp">Empire</Tab>
    </TabList><TabPanel id="FoR">Arma virumque cano, Troiae qui primus ab oris.</TabPanel><TabPanel id="MaR">Senatus Populusque Romanus.</TabPanel><TabPanel id="Emp">Alea jacta est.</TabPanel></Tabs>
</div>"
`;

exports[`Removes TabPanels from v3 import when s2 import exists first 1`] = `
"import { Tabs as S2Tabs, Tab, TabPanel, Tabs as RSPTabs, TabList } from '@react-spectrum/s2';

<>
  <S2Tabs />
  <RSPTabs aria-label="Test tabs"><TabList>
      <Tab id="a">A</Tab>
    </TabList><TabPanel id="a">A panel</TabPanel></RSPTabs>
</>"
`;

exports[`Update to use new API 1`] = `
"import { Tab, TabPanel, Tabs, TabList } from "@react-spectrum/s2";

<Tabs aria-label="History of Ancient Rome"><TabList>
    <Tab id="FoR">Founding of Rome</Tab>
    <Tab id="MaR">Monarchy and Republic</Tab>
    <Tab id="Emp">Empire</Tab>
  </TabList><TabPanel id="FoR">Arma virumque cano, Troiae qui primus ab oris.</TabPanel><TabPanel id="MaR">Senatus Populusque Romanus.</TabPanel><TabPanel id="Emp">Alea jacta est.</TabPanel></Tabs>"
`;
